# uni-homework

./: README.md
exerciseUno/: fetch-webstie.sh
exerciseUno/file-formats-bonanza/: README.md
exerciseUno/file-formats-bonanza/files/: planets.csv
exerciseUno/file-formats-bonanza/go/: go.mod  main.go
exerciseUno/file-formats-bonanza/node-js/: index.js  package-lock.json
homeworks/data-format-servers/: README.md
homeworks/data-format-servers/go/: go.mod  main.go
homeworks/data-format-servers/node-js/: index.js  package-lock.json  package.json
homeworks/date-servers/: README.md
homeworks/date-servers-part-duo/: README.md
homeworks/date-servers-part-duo/node-js/: index.js  package-lock.json  package.json
homeworks/date-servers-part-duo/python/: main.py  pyproject.toml
homeworks/date-servers/node-js/: package.json
homeworks/date-servers/python/: main.py  pyproject.toml
homeworks/file-formats-bonanza/: README.md
homeworks/file-formats-bonanza/files/: planets.csv  planets.json  planets.txt  planets.xml  planets.yml
homeworks/file-formats-bonanza/go/: go.sum
homeworks/file-formats-bonanza/node-js/: package.json
lectures/lecture-duo/duck/: index.js  package-lock.json  package.json
lectures/lecture-duo/excode/: index.js  package.json
lectures/lecture-duo/fast-api/: main.py  pyproject.toml
lectures/lecture-trio/server-events/: index.js  package-lock.json  package.json
lectures/lecture-trio/websockets/: index.js  package-lock.json  package.json
modules/python/: main.py
modules/python/libs/: LibraryA.py
(+14 files in other folders)
