[tool.poetry]
name = "date-server"
version = "0.1.0"
description = "A simple Rest API server that pretends to be an API server"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn =  "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
