[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Kwandes <bz.jasiek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
